<resources>
    <string name="app_name">Restaurants</string>
    <string name="login">Log in</string>
    <string name="login_text">Enter your email and password to securely access your account and manage your services.</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="signup_part1">Don\'t have an account?</string>
    <string name="signup_part2">Sign up here</string>
    <string name="login_continue">Or continue with account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>